--- a/p.htm
+++ b/p.htm
@@ -1,6 +1,89 @@
-<html>
-  <head>
-  <meta http-equiv="refresh" content="0;url=https://www.toponad.com/privacy-policy"> 
-  </head>
-  <body>Loading....</body>
-</html>
+Privacy Policy
+Last Updated: May 10, 2018
+
+Your privacy is important to Guangzhou Taku Information Technology Co., Ltd. ("we," "us," "our" or "TopOn"). So we've developed this Privacy Policy (this "Policy") in compliance with applicable data protection laws and regulations that covers how we collect, use, disclose, transfer, and store your information received by us when we provide Mobile Advertising Service to our partners and when you visit our website at https://www.toponad.com/ .
+
+Mobile Advertising Services Privacy Policy
+1.How We Collect and Use your Information
+We collect personal information in order to provide Mobile Advertising Services and for other specific purposes as described in this Policy. We only collect information that our partners (e.g. publisher) had instructed us to collect with your consent within your use of application, website or any other media platform that downloads and uses an application or service which contains our SDK or otherwise interacts with our Mobile Advertising Services, or provided by our partners through our Service. These information may include:
+
+Personal Location – such as city and country.
+Device information – such as device make, device model, operating system (e.g. iOS, Android), device type (e.g. tablet), device properties related to screen size and orientation, audio volume and battery, orientation and battery, carrier, name and properties of mobile application, country, time zone and locale settings (country and preferred language), network connection type, IP address, Internet browser user-agent used to access the Service, network provider, SDK version, timestamp, API key (identifier for application), application version, OS version of device, network status such as WiFi, the geo-location of your device (using GPS or other geo-location data) and the Identifier for Advertising (IDFA) or the Google Advertising ID (AAID), GAID, etc.
+Ad information – such as information like the content type of the ad, and what page the ad appeared on, whether you viewed, clicked, or otherwise interacted with the ad, the time of your visit, click, or other interaction or other ad engagement history about your interaction with the ads.
+We may use the information collected to evaluate Users' interests and behavior in order to being able to deliver tailored content if necessary, we may use identifiable information to enforce its terms, policies and legal agreements, to comply with court orders and warrants, and assist law enforcement agencies, to collect debts, prevent fraud, misappropriation, infringements, identity thefts and any other misuse of the Mobile Advertising Services, and to take any action in any legal dispute and proceeding. Where required, our partner will obtain your consent for and on our behalf for the processing of your personal information to serve ads on your device. You can withdraw your consent at any time.
+
+If you are partners of us, we may contact you periodically by e-mail to provide information regarding Mobile Marketing Services. If applicable law requires that we receive your consent before we send you certain types of marketing communications, we will only send you those types of communications after receiving your consent.
+
+If you decide at any time that you no longer wish to receive such communications from us, you may follow the unsubscribe instructions provided in any of the communications or request to be opted-out of receiving such communications via email to privacy@toponad.com.
+
+Even if you do not consent to processing of your personal information, we will still process your personal data when necessary to comply with law or to support our legitimate interests. For example, we will collect your IP address to perform a lookup of your country so that we know whether you are located in the European Economic Area, the United Kingdom or Switzerland and also, we will receive and send your IP address to our service providers for purposes of detecting invalid clicks and other fraudulent activity on us.
+
+2.How We Share Your Information
+We may share information with our partners or other third parties for the following purposes:
+
+To display advertising on your device, which may include interest-based advertising customized to individuals' interests, preferences and locations;
+To perform analysis aimed at improving our services;
+To provide our partners with our Mobile Marketing Services, such as to deliver relevant advertising, and to enable successful settlement with our partners;
+To enforce or apply our contracts with partners;
+To protect our rights, including for purpose of anti-fraud;
+To protect our or a third party's legal rights or to defend against a legal claim;
+In response to subpoenas, court orders, other legal processes or other legal requirements;
+To share information with third parties such as advisors and law enforcement authorities where it is necessary to: comply with the law or regulations.
+As part of a business transfer such as a merger, acquisition, or at bankruptcy.
+We may also transfer information to service providers, and other partners who support our business, such as providing technical infrastructure services, analyzing how our Mobile Marketing Services are used, measuring the effectiveness of ads and services, providing supporting service or facilitating payments. These partners must adhere to strict confidentiality obligations in a way that is consistent with this Privacy Policy and the agreements we enter into with them.
+
+3.How We Transfer Your Information Abroad
+We may store and process personal information in various sites all over the world. Your personal information may be transferred to recipients in countries located outside the European Economic Area ("EEA"). Our partners will obtain your consent to the transfer of your personal information to recipients, as described in this Policy, which are located outside the EEA to the extent required by any applicable law or regulation. You are entitled to withdraw your consent at any time.
+
+4.Information Security and Retention
+We are committed to implement reasonable measures, including physical, technical and administrative security measures to protect the information we collect. We limit access to information to authorized personal on a need to know basis in order to operate, develop or improve the Mobile Marketing Services
+
+We may retain the information relating to you collected as necessary for the provision of the Mobile Marketing Services, internal analytical purposes, or to comply with our legal obligations, resolve disputes and enforce agreements (e.g. settlement). We will determine the period to retain your personal information based on reasonable factors to the extent permitted by law or regulation, such as the time needed to retain the personal data as necessary to provide us, the type of personal data collected, any legal, contractual or similar obligation to retain the data we may subject to.
+
+5.Your Rights of Personal Data
+If you are in the EEA, you may be entitled:
+
+to request access to your personal information;
+to request rectification or erasure of your information;
+to restrict the processing or to object to processing of your personal information;
+to request us to provide the personal data about you that we store and transmit to another without hindrance from us, including requesting that we provide your personal data directly to another, i.e., a right to data portability; and
+to withdraw consent to processing your personal data.
+Additionally, you have the right to lodge a complaint against us.
+Website Privacy Policy
+1.How We Collect and Use your Information
+We may receive and collect your information when you visit the Website, including through the use of Cookies and other similar tracking technologies. This information may include your names, E-mail addresses, your browser type, domain name, IP address, pages visited, and the length of your user session using various technologies and means, such as Internet Protocol Address, cookies, Internet Tags and navigational data collection. You can control the use of cookies at the individual browser level, but if you choose to disable cookies, it may limit your use of certain features or functions on our Website or Service.
+
+We may use your information to evaluate users' interests and behavior in order to being able to provide you with information of our Service, to contact you and respond to your requests and enquiries and for business administration, including statistical analysis.
+
+2.How We Share Your Information
+We may share information collected through the Website for purposes including:
+
+To provide to third parties to operate or improve the Website and Mobile Marketing Service;
+To our affiliated companies for purpose provided in this Privacy Policy;
+To comply with obligations required by law as required or permitted by law;
+To comply with a subpoena or similar legal process or government request, or when we believe in good faith that disclosure is legally required or otherwise necessary to protect our rights and property, or the rights, property or safety of others, including to advisers, law enforcement agencies, judicial and regulatory authorities;
+To transfer to a third party that acquires all or part of our assets or shares, or that succeeds us in carrying on all or a part of our business, whether by merger, acquisition, reorganisation or otherwise.
+3.How We Transfer Your Information Abroad
+Your personal information will be transferred to recipients in countries located outside the European Economic Area ("EEA"). Where required by law, our partners will obtain your consent to the transfer of your personal information to recipients, as described in this Privacy Policy, which are located outside the EEA. You may withdraw your consent at any time.
+
+4.Data Security and Retention
+We have implemented reasonable physical, technical and administrative security measures for the Website to help protect information we collect and store.
+
+We will only keep your personal information for as long as necessary and in any event in relation to personal information collected by us on the Website we will only keep this personal information for one (1) year.
+
+5.Your Rights of Personal Data
+If you are in the EEA, you may be entitled:
+to request access to your personal information;
+to request rectification or erasure of your information;
+to restrict the processing or to object to processing of your personal information;
+to request us to provide the personal data about you that we store and transmit to another without hindrance from us, including requesting that we provide your personal data directly to another, i.e., a right to data portability; and
+to withdraw consent to processing your personal data.
+Additionally, you have the right to lodge a complaint against us.
+
+6.Changes
+Any changes to the Policy will become effective when the revised Policy is posted on the Website. By continuing to use the Website or Services following such changes, you are agreeing to accept the terms of the revised Policy.
+
+7.Contact Us
+If you have any questions or comments about this Policy, please write to us at:
+
+Guangzhou Taku Information Technology Co., Ltd.
