--- a/p.htm
+++ b/p.htm
@@ -1,3 +1,4 @@
+<pre>
 Privacy Policy
 Last Updated: May 10, 2018
 
@@ -87,3 +88,4 @@ Any changes to the Policy will become effective when the revised Policy is poste
 If you have any questions or comments about this Policy, please write to us at:
 
 Guangzhou Taku Information Technology Co., Ltd.
+</pre>
