--- a/p.htm
+++ b/p.htm
@@ -1,4 +1,10 @@
-<pre>
+<html>
+  <head>
+    <style>
+      body:{white-space: pre-line;}
+    </style>
+  </head>
+<body>
 Privacy Policy
 Last Updated: May 10, 2018
 
@@ -88,4 +94,4 @@ Any changes to the Policy will become effective when the revised Policy is poste
 If you have any questions or comments about this Policy, please write to us at:
 
 Guangzhou Taku Information Technology Co., Ltd.
-</pre>
+  </body></html>
