--- a/p.htm
+++ b/p.htm
@@ -1,10 +1,11 @@
 <html>
   <head>
     <style>
-      body:{white-space: pre-line;}
+      body {white-space: pre-line;}
     </style>
   </head>
 <body>
+  <pre>
 Privacy Policy
 Last Updated: May 10, 2018
 
@@ -93,5 +94,5 @@ Any changes to the Policy will become effective when the revised Policy is poste
 7.Contact Us
 If you have any questions or comments about this Policy, please write to us at:
 
-Guangzhou Taku Information Technology Co., Ltd.
+  Guangzhou Taku Information Technology Co., Ltd.</pre>
   </body></html>
