--- a/p.htm
+++ b/p.htm
@@ -10,7 +10,7 @@
 Privacy Policy
 Last Updated: May 10, 2018
 
-Your privacy is important to Guangzhou Taku Information Technology Co., Ltd. ("we," "us," "our" or "TopOn"). So we've developed this Privacy Policy (this "Policy") in compliance with applicable data protection laws and regulations that covers how we collect, use, disclose, transfer, and store your information received by us when we provide Mobile Advertising Service to our partners and when you visit our website at https://www.toponad.com/ .
+Your privacy is important to 0X512 Information Technology Co., Ltd. ("we," "us," "our" or "TopOn"). So we've developed this Privacy Policy (this "Policy") in compliance with applicable data protection laws and regulations that covers how we collect, use, disclose, transfer, and store your information received by us when we provide Mobile Advertising Service to our partners and when you visit our website at https://www.toponad.com/ .
 
 Mobile Advertising Services Privacy Policy
 1.How We Collect and Use your Information
@@ -95,5 +95,5 @@ Any changes to the Policy will become effective when the revised Policy is poste
 7.Contact Us
 If you have any questions or comments about this Policy, please write to us at:
 
-  Guangzhou Taku Information Technology Co., Ltd.</pre>
+  0X512 Information Technology Co., Ltd.</pre>
   </body></html>
