--- a/p.htm
+++ b/p.htm
@@ -10,7 +10,7 @@
 Privacy Policy
 Last Updated: May 10, 2018
 
-Your privacy is important to 0X512 Information Technology Co., Ltd. ("we," "us," "our" or "TopOn"). So we've developed this Privacy Policy (this "Policy") in compliance with applicable data protection laws and regulations that covers how we collect, use, disclose, transfer, and store your information received by us when we provide Mobile Advertising Service to our partners and when you visit our website at https://www.toponad.com/ .
+Your privacy is important to 0X512 Information Technology Co., Ltd. ("we," "us," "our"). So we've developed this Privacy Policy (this "Policy") in compliance with applicable data protection laws and regulations that covers how we collect, use, disclose, transfer, and store your information received by us when we provide Mobile Advertising Service to our partners and when you visit our website at https://www.toponad.com/ .
 
 Mobile Advertising Services Privacy Policy
 1.How We Collect and Use your Information
