--- a/p.htm
+++ b/p.htm
@@ -6,7 +6,7 @@
     </style>
   </head>
 <body>
-  <pre>
+ 
 Privacy Policy
 Last Updated: May 10, 2020
 
@@ -95,5 +95,5 @@ Any changes to the Policy will become effective when the revised Policy is poste
 7.Contact Us
 If you have any questions or comments about this Policy, please write to us at:
 
-  0X512 Information Technology Co., Ltd.</pre>
+  0X512 Information Technology Co., Ltd. 
   </body></html>
