--- a/support.html
+++ b/support.html
@@ -15,10 +15,13 @@
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                <small id="emailError" class="text-danger" style="display: none;">Please enter a valid email
+                    address.</small>
             </div>
             <div class="form-group">
                 <label for="message">Message:</label>
                 <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                <small id="messageError" class="text-danger" style="display: none;">Please enter a message.</small>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -36,9 +39,33 @@
             $("#supportForm").submit(function (event) {
                 event.preventDefault(); // Prevent form submission
 
+                // Clear previous error messages
+                $("#emailError").hide();
+                $("#messageError").hide();
+
+                // Validate email
+                var email = $("#email").val();
+                if (!isValidEmail(email)) {
+                    $("#emailError").show();
+                    return;
+                }
+
+                // Validate message
+                var message = $("#message").val();
+                if (message.trim() === '') {
+                    $("#messageError").show();
+                    return;
+                }
+
                 // Show success message
                 $("#successMessage").show();
             });
+
+            // Email validation function
+            function isValidEmail(email) {
+                var emailRegex = /^[\w-]+(\.[\w-]+)*@([\w-]+\.)+[a-zA-Z]{2,7}$/;
+                return emailRegex.test(email);
+            }
         });
     </script>
 </body>
